# wasm-string-bridge

./: .gitignore  Cargo.toml  README.md
guests/js/: package-lock.json  package.json
guests/js/src/: index.js
guests/python/: requirements.txt
guests/python/src/: app.py
guests/rust/: Cargo.toml
guests/rust/src/: lib.rs
host/: Cargo.toml
host/src/: main.rs
memo/: 01-wasmtime-core-abstractions.md  02-language-community-convergence.md  03-ai-agent-security-and-wasm.md
wit/: interface.wit
