[package]
name = "host"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "host"
path = "src/main.rs"

[[bin]]
name = "precompile"
path = "src/bin/precompile.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
wasmtime = "27"
wasmtime-wasi = "27"
